# CURRENCYTRACK

./: .gitignore  README.md  config.py  currency_monitoring.py  project.pptx  pyproject.toml  requirements.txt
src/: config.py  currencies_names.py  main.py
tests/: test_1.py
